5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4190/executions/1715_3063.log
== TEST (2019-05-02 16:20:06) 
-- CODE:
po = int(input('Quantidade de pecas de ouro: '))
no = input('Nome da armadura: ').upper()
d = int(input('Fator de destreza: '))

if (d>0 or d<8):
	if (po!=200 or po!=50 or po!=100):
		print('PO insuficiente')
	elif (po==200 and no=='INTEIRA'):
		print(30*d-20)
	elif (po==50 and no=='MALHA'):
		print(15*d-1)
	elif (po==100 and no=='PLACA'):
		print(20*d-18)
else:
	print('Entrada invalida')
	
-- OUTPUT:
PO insuficiente
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:21:30) 
-- CODE:
po = int(input('Quantidade de pecas de ouro: '))
no = input('Nome da armadura: ').upper()
d = int(input('Fator de destreza: '))

if (d>0 or d<8):
	if (po=!200 or po=!50 or po=!100):
		print('PO insuficiente')
	elif (po==200 and no=='INTEIRA'):
		print(30*d-20)
	elif (po==50 and no=='MALHA'):
		print(15*d-1)
	elif (po==100 and no=='PLACA'):
		print(20*d-18)
else:
	print('Entrada invalida')
	
-- ERROR:
File "XXXX", line 6
    if (po=!200 or po=!50 or po=!100):
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:22:05) 
-- CODE:
po = int(input('Quantidade de pecas de ouro: '))
no = input('Nome da armadura: ').upper()
d = int(input('Fator de destreza: '))

if (d>0 or d<8):
	if (po!=200 or po!=50 or po!=100):
		print('PO insuficiente')
	elif (po==200 and no=='INTEIRA'):
		print(30*d-20)
	elif (po==50 and no=='MALHA'):
		print(15*d-1)
	elif (po==100 and no=='PLACA'):
		print(20*d-18)
else:
	print('Entrada invalida')
	
-- OUTPUT:
PO insuficiente
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:26:59) 
-- CODE:
po = int(input('Quantidade de pecas de ouro: '))
no = input('Nome da armadura: ').upper()
d = int(input('Fator de destreza: '))

if (d>0 or d<8):
	elif (po>=200 and no=='INTEIRA'):
		print(30*d-20)
	elif (po>=50 and no=='MALHA'):
		print(15*d-1)
	elif (po>=100 and no=='PLACA'):
		print(20*d-18)
	else:
		print('PO insuficiente')
else:
	print('Entrada invalida')
	
-- ERROR:
File "XXXX", line 6
    elif (po>=200 and no=='INTEIRA'):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:27:44) 
-- CODE:
po = int(input('Quantidade de pecas de ouro: '))
no = input('Nome da armadura: ').upper()
d = int(input('Fator de destreza: '))

if (d>0 or d<8):
	elif (po>=200 and no=='INTEIRA'):
		print(30*d-20)
	elif (po>=50 and no=='MALHA'):
		print(15*d-1)
	elif (po>=100 and no=='PLACA'):
		print(20*d-18)
	else:
		print('PO insuficiente')
else:
	print('Entrada invalida')
	
-- ERROR:
File "XXXX", line 6
    elif (po>=200 and no=='INTEIRA'):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:27:59) 
-- CODE:
po = int(input('Quantidade de pecas de ouro: '))
no = input('Nome da armadura: ').upper()
d = int(input('Fator de destreza: '))

if (d>0 or d<8):
	if (po>=200 and no=='INTEIRA'):
		print(30*d-20)
	elif (po>=50 and no=='MALHA'):
		print(15*d-1)
	elif (po>=100 and no=='PLACA'):
		print(20*d-18)
	else:
		print('PO insuficiente')
else:
	print('Entrada invalida')
	
-- OUTPUT:
PO insuficiente
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:28:06) 
-- CODE:
po = int(input('Quantidade de pecas de ouro: '))
no = input('Nome da armadura: ').upper()
d = int(input('Fator de destreza: '))

if (d>0 or d<8):
	if (po>=200 and no=='INTEIRA'):
		print(30*d-20)
	elif (po>=50 and no=='MALHA'):
		print(15*d-1)
	elif (po>=100 and no=='PLACA'):
		print(20*d-18)
	else:
		print('PO insuficiente')
else:
	print('Entrada invalida')
	
-- OUTPUT:
PO insuficiente
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 16:28:21) 
-- CODE:
po = int(input('Quantidade de pecas de ouro: '))
no = input('Nome da armadura: ').upper()
d = int(input('Fator de destreza: '))

if (d>0 or d<8):
	if (po>=200 and no=='INTEIRA'):
		print(30*d-20)
	elif (po>=50 and no=='MALHA'):
		print(15*d-1)
	elif (po>=100 and no=='PLACA'):
		print(20*d-18)
	else:
		print('PO insuficiente')
else:
	print('Entrada invalida')
	
-- EXECUTION TIME:
0.181508
-- TEST CASE 1:
---- input:
-2
INTEIRA
2
---- correct output:
PO insuficiente
---- user output:
PO insuficiente
-- TEST CASE 2:
---- input:
8
MALHA
8
---- correct output:
PO insuficiente
---- user output:
PO insuficiente
-- TEST CASE 3:
---- input:
56
MALHA
5
---- correct output:
74
---- user output:
74
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
